--- a/index.html
+++ b/index.html
@@ -1,21 +1,66 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Hello, world!</title>
+    <title>NYT Explorer</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+    <!-- Bootstrap CSS 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">-->
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+     <!-- React.js -->
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+    <!-- Babel 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>-->
+    <!-- JQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link href="css/NYT_Explorer.css" rel="stylesheet" type="text/css" />  
+    </head>
+  <body>
+    <section id='section1'>
+      <div>
+            <h1>NYT Explorer</h1>
+      </div>
+      </section>
+        <section id='section2'>
+          <div>
+            <form onsumbit='search(event)'>
+              <p>Year and month: </p> <input type='month' id='input'/>
+              <br>
+              <br>
+              <button type='submit' class='btn btn-primary'>Search</button>
+            </form>
+          </div>
+        </section>
+        <hr>
+        <section id='section3'>
+          <div>
+            <p id='root'/>
+          </p>
+        </div>
+        <script type='text/javascript'>
+        var url = "https://api.nytimes.com/svc/archive/v1/2016/1.json";
+url += '?' + $.param({
+  'api-key': "067228c511f04592964fcc8bd15ae934"
+});
+const output=document.getElementById('root')
+$.ajax({
+  url: url,
+  method: 'GET',
+}).done(function(result) {
+
+  console.log(result)
+  
+  console.log(result.response.docs[0].web_url)
+
+}).fail(function(err) {
+  throw err;
+});
+
+
+        </script>
+  <script src='js/NYT_Explorer.js' type='text/babel'></script>
   </body>
 </html>
