--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
     <!-- JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-     <script src='js/NYT_Explorer.js' type='text/babel'></script>
+
     <link href="css/NYT_Explorer.css" rel="stylesheet" type="text/css" />  
     </head>
   <body>
@@ -28,10 +28,11 @@
         <section id='section2'>
           <div>
             
-              <p>Year and month: </p> <input type='month' id='input'/>
+              <p>Year: </p> <input type='number' id='year'/>
+              <p>Month: </p> <input type='number' id='month'/>
               <br>
               <br>
-              <button type='submit' class='btn btn-primary' onclick='search()'>Search</button>
+              <button type='submit' class='btn btn-primary' onclick='search()' id='button'>Search</button>
            
           </div>
         </section>
@@ -43,6 +44,7 @@
         </div>
       </section>
  
+      <script src='js/NYT_Explorer.js' type='text/babel'></script>
  
   </body>
 </html>
