--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
 </head>
 
 <body>
-
   <section id='section1'>
     <div>
-      <h1>NYT Explorer</h1>
-      <p>NYT Explorer is single page web app that enables end user to explore NY Times archive of articles. </p>
+      <h1 id="top">NYT Explorer</h1>
+      <p>NYT Explorer is single page web app that enables you to explore NY Times archive of articles. </p>
     </div>
   </section>
-
   <section id='section2'>
     <div>
       <p>Choose date:  <input type='month' id='date1' /> 
@@ -34,8 +32,7 @@
     <div id='amount'/>
   </section>
   <hr>
-  <div id='root'/>  
+  <div id='root'/>
   <script src='js/NYT_Explorer.js' type='text/babel'></script>
- 
 </body>
 </html>
