--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     <div id='amount'/>
   </section>
   <hr>
+  <div id='ee'>
   <div id='root'/>
+  <div id='aa'>aaa</div>
+</div>
   <script src='js/NYT_Explorer.js' type='text/babel'></script>
 </body>
 </html>
