--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
     <div id='amount'/>
   </section>
   <hr>
-  <div id='ee'>
-  <div id='root'/>
-  <div id='aa'>aaa</div>
+  <div id='root'></div>
 </div>
   <script src='js/NYT_Explorer.js' type='text/babel'></script>
 </body>
