--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,10 @@
   <title>NYT Explorer</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!-- React.js -->
-  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-  <!-- Babel -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
-  <!-- JQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <link href="css/NYT_Explorer.css" rel="stylesheet" type="text/css" />  
+ 
+ <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    
 </head>
 
 <body>
@@ -34,6 +30,5 @@
   <hr>
   <div id='root'></div>
 </div>
-  <script src='js/NYT_Explorer.js' type='text/babel'></script>
 </body>
 </html>
